[package]
name = "transform-include"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.4", features = ["derive", "unicode"] }
itertools = "0.13.0"
once_cell = "1.19.0"
regex = "1.10.5"
similar = "2.5.0"
thiserror = "1.0.61"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
similar-asserts = "1.5.0"

[profile.release]
lto = true
strip = true
